Added html markup

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wireframe</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- Add your HTML markup here -->
+  <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+  <main>
+    <section class="header">
+      <header>Welcome to Git</header>
+      <p>A distributed version control system, where every developer gets their local repository with full commit history</p>
+    </section>
+    <section id="article1">
+      <article>
+        <h2>What is Git?</h2>
+        <p>Git is a free and open source distributed version control system designed to handle everything
+          from small to very large projects with speed and efficiency.
+
+          Git is easy to learn and has a tiny footprint with lightning fast performance.
+          It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like cheap local
+          branching,
+          convenient staging areas, and multiple workflows.</p>
+        <button target="https://git-scm.com/">READ MORE</button>
+      </article>
+    </section>
+    <section id="article2">
+      <article>
+        <h2>Why do Developers need Git?</h2>
+        <p>Git is all about efficiency. For developers, it eliminates everything from the time wasted passing commits
+          over a
+          network connection to the man hours required to integrate changes in a centralized version control system.
+          It even makes better use of junior developers by giving them a safe environment to work in.
+        </p>
+        <button target="https://www.atlassian.com/git/tutorials/why-git">READ MORE</button>
+      </article>
+    </section>
+    <section id="article3">
+      <article>
+        <h2>What is a branch in Git?</h2>
+        <p>Git branches are effectively a pointer to a snapshot of your changes.
+          When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to
+          encapsulate your changes.</p>
+        <button target="https://www.w3schools.com/git/git_branch.asp?remote=github">READ MORE</button>
+      </article>
+    </section>
+  </main>
 </body>
+
 </html>
