--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -12,11 +12,12 @@
     <!-- header -->
     <header>
       <img class="logo-img" src="./img/logo.png" alt="logo" />
+      <p class="motto-p">The best cakes in town delivered to your door</p>
       <div class="inner-header">
-        <label class="ham-label" for="ham-checkbox">
-          <input type="checkbox" id="ham-checkbox" />
-        </label>
-        <aside class="menu-aside">
+        <!-- <label class="ham-label" for="ham-checkbox">
+          <input type="checkbox" id="ham-checkbox" /> -->
+        <!-- </label> -->
+        <!-- <aside class="menu-aside"> -->
           <nav>
             <a href="">Home</a>
             <a href="">Cakes</a>
@@ -24,8 +25,8 @@
             <a href="">Lessons</a>
             <a href="">About</a>
           </nav>
-        </aside>
-        <p class="motto-p">The best cakes in town delivered to your door</p>
+        <!-- </aside> -->
+        <!-- <p class="motto-p">The best cakes in town delivered to your door</p> -->
       </div>
     </header>
     <!-- main -->
