--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Wire frame</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
+   
+     <header class="header">
+        <h1 class="title">GitHub</h1>
+        <p>What Is GitHub? And What Is It Used For?</p>
+     </header>
+
+     <main>
+      <h2>What is GitHub</h2>
+      <p>GitHub is an online software development platform. It's used for storing, tracking, and collaborating on software projects.</p>
+      <p>It makes it easy for developers to share code files and collaborate with fellow developers on open-source projects. GitHub also serves as a social networking site where developers can openly network, collaborate, and pitch their work.</p>
+      <p>GitHub allows software developers and engineers to create remote, public-facing repositories on the cloud for free. A repository, or "repo" for short, is a coding project’s files and the revision history for each file.
+        Once you’ve set up a repository on GitHub, you can copy it to your device, add and modify files locally, then "push" your changes back to the repository where your changes display for the public.</p>
+
+     </main>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
