Remove old css and add new

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -5,15 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wireframe</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="styles.css"/>
 </head>
 
 <body>
   <!-- Add your HTML markup here -->
   <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
   <main>
-    <section class="header">
-      <header>Welcome to Git</header>
+    <section>
+      <header class="header">
+      <h1>Welcome to Git</h1>
+    </header>
       <p>A distributed version control system, where every developer gets their local repository with full commit history</p>
     </section>
     <section id="article1">
