Change to content and added links in MD

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <img src="wireframe.png">
+    <h2>What is git?</h2>
+    <p>Git is a version control software that allows developers to create and manage different versions of a project.</p>
+    <h2>Why do developers need git?</h2>
+    <p>Developers use git to handle large and small projects more efficiently track changes in the source code</p>
+    <h2>What is branch in git?</h2>
+    <p>Branches are for experimentation to try out difference styles with different branch names. E.g. try-purple or try-blue to experiment different colour themes. They may share some commonality in history and content but may vary in others.</p>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
