added a comment to MultiPage index file

--- a/MultiPage-Clone/index.html
+++ b/MultiPage-Clone/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <!-- Add your markup here -->
+     <!--New Comment-->
 
 
     <!-- Please leave this in to credit the creators of this design -->
