--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    <header><h1>A little description about Git</h1></header>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+      <h2>What is Git?</h2>
+      <p>Git is a free, open-source version control system that helps developers track changes to their code and projects. It's the most widely used version control system in the world and is considered the modern standard for software development.</p>
+      <button>Read more</button>
+
+      <div class="desc">
+        <div>
+          <h2>Why do developers need Git?</h2>
+          <p>Git is all about efficiency. For developers, it eliminates everything from the time wasted passing commits over a network connection to the man hours required to integrate changes in a centralized version control system.</p>
+          <button>Read more</button>
+        </div>
+
+        <div>
+          <h2>What is a branch in Git?</h2>
+          <p>Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes.</p>
+          <button>Read more</button>
+        </div>
+    </div>
+
+    <footer>
+      <p>For more information visit <a href="git.com">www.git.com</a></p>
+    </footer>
+    
 </body>
-</html
+
+</html> 
