replaces b tag with cite tag in header description

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Git Essentials: A Guide to Version Control for Developers</h1>
-        <p><b>Git Essentials</b> is a beginner-friendly site  designed to explain the fundamental concepts of
+        <p><cite>Git Essentials</cite> is a beginner-friendly site  designed to explain the fundamental concepts of
             Git, the widely-used version control system. Learn what Git is, why developers rely on it for tracking
             changes, and how branching works to enable collaborative development. Whether you're new to Git or looking
             to refresh your knowledge, this guide offers clear, concise answers to essential Git questions.</p>
