adds alt attribute to each image article

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -19,7 +19,7 @@
 
     <div class="articles">
         <article>
-            <img src="images/git.webp"></img>
+            <img src="images/git.webp" alt="Git version control system logo"></img>
             <h3>What is Git?</h3>
             <p>Git is a distributed version control system designed to track changes in source code during software
                 development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
@@ -30,7 +30,7 @@
         </article>
 
         <article>
-            <img src="images/developer.jpeg"></img>
+            <img src="images/developer.jpeg" alt="screens displaying code"></img>
             <h3>Why do developers need Git?</h3>
             <p>Developers need Git to efficiently manage, track, and collaborate on software projects. Git provides
                 version control, allowing teams to work on the same project without conflicts, roll back to previous
@@ -40,7 +40,7 @@
         </article>
 
         <article>
-            <img src="images/branch.jpeg"></img>
+            <img src="images/branch.jpeg" alt="a branch of a tree"></img>
             <h3>What is a branch in Git?</h3>
             <p>A branch in Git is a separate line of development, allowing developers to work on new features, bug
                 fixes, or experiments without affecting the main project. Branching enables parallel development, keeps
