adds my name as footer

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -50,7 +50,7 @@
         </article>
     </div>
 
-    <footer>&copy; 2024 EDA Technology. All rights reversed.</footer>
+    <footer>By Elhadj Abdoul Diallo.</footer>
 </body>
 
 </html>
