put footer content in a h2 tag

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -50,7 +50,9 @@
         </article>
     </div>
 
-    <footer>By Elhadj Abdoul Diallo.</footer>
+    <footer>
+        <h2>By Elhadj Abdoul Diallo</h2>.
+    </footer>
 </body>
 
 </html>
