moves first article out of the articles section

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <h1>Git Essentials: A Guide to Version Control for Developers</h1>
-        <p><cite>Git Essentials</cite> is a beginner-friendly site  designed to explain the fundamental concepts of
+        <p><cite>Git Essentials</cite> is a beginner-friendly site designed to explain the fundamental concepts of
             Git, the widely-used version control system. Learn what Git is, why developers rely on it for tracking
             changes, and how branching works to enable collaborative development. Whether you're new to Git or looking
             to refresh your knowledge, this guide offers clear, concise answers to essential Git questions.</p>
     </header>
 
-    <div class="articles">
+    <div class="first-article-section">
         <article>
             <img src="images/git.webp" alt="Git version control system logo">
             <h3>What is Git?</h3>
@@ -28,7 +28,10 @@
                 collaboration, branch creation, and change history tracking.</p>
             <a href="articles/what-is-git.html">Read More</a>
         </article>
+    </div>
 
+
+    <div class="articles">
         <article>
             <img src="images/developer.jpeg" alt="screens displaying code">
             <h3>Why do developers need Git?</h3>
