changes class name for article 2 and 3

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -17,6 +17,7 @@
             to refresh your knowledge, this guide offers clear, concise answers to essential Git questions.</p>
     </header>
 
+    <div class="articles">
         <article class="first_article">
             <img src="images/git.webp" alt="Git version control system logo">
             <h3>What is Git?</h3>
@@ -28,8 +29,8 @@
                 collaboration, branch creation, and change history tracking.</p>
             <a href="articles/what-is-git.html">Read More</a>
         </article>
-        
-    <div class="articles">
+
+    <div class="articles_two_and_three_section">
         <article>
             <img src="images/developer.jpeg" alt="screens displaying code">
             <h3>Why do developers need Git?</h3>
@@ -49,6 +50,7 @@
                 complete.</p>
             <a href="articles/what-is-git.html">Read More</a>
         </article>
+    </div>
     </div>
 
     <footer>
