--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <header>
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
-  </form>
+    <form>
 
+    </form>
+    <label for="customer-name">Your Name: </label>
+    <input type="text" name="customer-name" id="customer-name" minlength="2" required><br>
   </main>
   <footer>
     <!-- change to your name-->
