--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,6 +18,9 @@
     <form>
       <label for="customer-name">Your Name: </label>
       <input type="text" name="customer-name" id="customer-name" minlength="2" required><br>
+
+      <label for="email">Your Email: </label>
+      <input type="email" name="email" id="email" required><br>
     </form>
   </main>
   <footer>
