adds color options

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -21,6 +21,14 @@
 
       <label for="email">Your Email: </label>
       <input type="email" name="email" id="email" required><br>
+
+       <!--Color options-->
+       <label for="customer-name">Choose Color Your Preferred: </label>
+       <select>
+         <option value="black">Black</option>
+         <option value="white">White</option>
+         <option value="red">Red</option>
+       </select><br>
     </form>
   </main>
   <footer>
