adds size options

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -22,13 +22,24 @@
       <label for="email">Your Email: </label>
       <input type="email" name="email" id="email" required><br>
 
-       <!--Color options-->
-       <label for="customer-name">Choose Color Your Preferred: </label>
-       <select>
-         <option value="black">Black</option>
-         <option value="white">White</option>
-         <option value="red">Red</option>
-       </select><br>
+      <!--Color options-->
+      <label for="customer-name">Choose Color Your Preferred: </label>
+      <select>
+        <option value="black">Black</option>
+        <option value="white">White</option>
+        <option value="red">Red</option>
+      </select><br>
+
+      <!--Size options-->
+      <label for="customer-name">Choose Your Preferred Size: </label>
+      <select>
+        <option value="xs">XS</option>
+        <option value="s">S</option>
+        <option value="m">M</option>
+        <option value="l">L</option>
+        <option value="xl">XL</option>
+        <option value="xxl">XXL</option>
+      </select><br>
     </form>
   </main>
   <footer>
