--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -44,6 +44,9 @@
       <!--delivery date-->
       <label for="delivery-date">Choose your delivery date (within the next 4 weeks):</label>
       <input type="date" id="delivery-date" name="delivery-date" min="2024-10-03" max="2024-10-31">
+
+      <br><br>
+      <input type="submit" value="Submit">
     </form>
   </main>
   <footer>
