adds space between input fields

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -17,19 +17,22 @@
   <main>
     <form>
       <label for="customer-name">Your Name: </label>
-      <input type="text" name="customer-name" id="customer-name" minlength="2" required><br>
+      <input type="text" name="customer-name" id="customer-name" minlength="2" required>
 
+      <br><br>
       <label for="email">Your Email: </label>
-      <input type="email" name="email" id="email" required><br>
+      <input type="email" name="email" id="email" required>
 
+      <br><br>
       <!--Color options-->
       <label for="customer-name">Choose Color Your Preferred: </label>
       <select>
         <option value="black">Black</option>
         <option value="white">White</option>
         <option value="red">Red</option>
-      </select><br>
-
+      </select>
+      
+      <br><br>
       <!--Size options-->
       <label for="customer-name">Choose Your Preferred Size: </label>
       <select>
@@ -39,8 +42,9 @@
         <option value="l">L</option>
         <option value="xl">XL</option>
         <option value="xxl">XXL</option>
-      </select><br>
+      </select>
 
+      <br><br>
       <!--delivery date-->
       <label for="delivery-date">Choose your delivery date (within the next 4 weeks):</label>
       <input type="date" id="delivery-date" name="delivery-date" min="2024-10-03" max="2024-10-31">
