--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -25,13 +25,13 @@
 
       <br><br>
       <!--Color options-->
-      <label for="customer-name">Choose Color Your Preferred: </label>
+      <label for="customer-name">Choose Your Preferred Color: </label>
       <select>
         <option value="black">Black</option>
         <option value="white">White</option>
         <option value="red">Red</option>
       </select>
-      
+
       <br><br>
       <!--Size options-->
       <label for="customer-name">Choose Your Preferred Size: </label>
