--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -25,8 +25,8 @@
 
       <br><br>
       <!--Color options-->
-      <label for="customer-name">Choose Your Preferred Color: </label>
-      <select>
+      <label for="color-select">Choose Your Preferred Color: </label>
+      <select id="color-select" name="color">
         <option value="black">Black</option>
         <option value="white">White</option>
         <option value="red">Red</option>
