updates select id for size options

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -34,8 +34,8 @@
 
       <br><br>
       <!--Size options-->
-      <label for="customer-name">Choose Your Preferred Size: </label>
-      <select>
+      <label for="size-select">Choose Your Preferred Size: </label>
+      <select id="size-select" name="size">
         <option value="xs">XS</option>
         <option value="s">S</option>
         <option value="m">M</option>
