adds my name as foooter

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -54,8 +54,7 @@
     </form>
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Elhadj Abdoul Diallo</h2>
   </footer>
 </body>
 
