--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -50,9 +50,19 @@
       </section>
     </main>
 
+   
     <!-- Add your markup here -->
     <!-- Add your markup here -->
     <!-- Add your markup here -->
     <!-- Add your markup here -->
+    <footer>
+      <p>Responsive Cake webpage</p>
+      <div class="social-media">
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+        <a href="#">Twitter</a>
+      </div>
+    </footer>
+    
   </body>
 </html>
