link the css. and add paragraph,h1, image tag

--- a/MultiPage-Clone/index.html
+++ b/MultiPage-Clone/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Add a link to your custom CSS here -->
+    <link rel="stylesheet" href="styles.css">
 
     <title>Responsive grid project</title>
 </head>
@@ -12,6 +13,13 @@
 <body>
 
     <!-- Add your markup here -->
+
+        <h1>Welcome Wix</h1>
+        
+  <p>This is the main content of my web page.</p>
+  <img src="image.jpg" alt="An image on my web page">
+        
+  
 
 
     <!-- Please leave this in to credit the creators of this design -->
