adds meta description for SEO

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wire frame</title>
+    <meta name="description" content="Learn the basics of Git, the widely-used version control system." >
     <link rel="stylesheet" href="css/index.css">
 </head>
 
