--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wire frame</title>
-    <meta name="description" content="Learn the basics of Git, the widely-used version control system." >
+    <meta name="description" content="Learn the basics of Git, the widely-used version control system.">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -20,7 +20,7 @@
 
     <div class="articles">
         <article class="first_article">
-            <img src="images/git.webp" alt="Git version control system logo">
+            <img src="images/git.webp" width="300" height="auto" alt="Git version control system logo">
             <h2>What is Git?</h2>
             <p>Git is a distributed version control system designed to track changes in source code during software
                 development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
@@ -31,27 +31,29 @@
             <a href="articles/what-is-git.html">Read More</a>
         </article>
 
-    <div class="articles_two_and_three_section">
-        <article>
-            <img src="images/developer.jpeg" alt="screens displaying code">
-            <h2>Why do developers need Git?</h2>
-            <p>Developers need Git to efficiently manage, track, and collaborate on software projects. Git provides
-                version control, allowing teams to work on the same project without conflicts, roll back to previous
-                versions, and maintain a clear project history. It supports branching and merging, enabling developers
-                to work on different features simultaneously while ensuring code stability.</p>
-            <a href="articles/what-is-git.html">Read More</a>
-        </article>
+        <div class="articles_two_and_three_section">
+            <article>
+                <img src="images/developer.jpeg" width="300" height="auto" alt="screens displaying code">
+                <h2>Why do developers need Git?</h2>
+                <p>Developers need Git to efficiently manage, track, and collaborate on software projects. Git provides
+                    version control, allowing teams to work on the same project without conflicts, roll back to previous
+                    versions, and maintain a clear project history. It supports branching and merging, enabling
+                    developers
+                    to work on different features simultaneously while ensuring code stability.</p>
+                <a href="articles/what-is-git.html">Read More</a>
+            </article>
 
-        <article>
-            <img src="images/branch.jpeg" alt="a branch of a tree">
-            <h2>What is a branch in Git?</h2>
-            <p>A branch in Git is a separate line of development, allowing developers to work on new features, bug
-                fixes, or experiments without affecting the main project. Branching enables parallel development, keeps
-                the main codebase stable, and simplifies merging changes back into the main branch once work is
-                complete.</p>
-            <a href="articles/what-is-git.html">Read More</a>
-        </article>
-    </div>
+            <article>
+                <img src="images/branch.jpeg" width="300" height="auto" alt="a branch of a tree">
+                <h2>What is a branch in Git?</h2>
+                <p>A branch in Git is a separate line of development, allowing developers to work on new features, bug
+                    fixes, or experiments without affecting the main project. Branching enables parallel development,
+                    keeps
+                    the main codebase stable, and simplifies merging changes back into the main branch once work is
+                    complete.</p>
+                <a href="articles/what-is-git.html">Read More</a>
+            </article>
+        </div>
     </div>
 
     <footer>
