changes images of jpeg format to webp format

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -33,7 +33,7 @@
 
         <div class="articles_two_and_three_section">
             <article>
-                <img src="images/developer.jpeg" width="300" height="auto" alt="screens displaying code">
+                <img src="images/developer.webp" width="300" height="auto" alt="screens displaying code">
                 <h2>Why do developers need Git?</h2>
                 <p>Developers need Git to efficiently manage, track, and collaborate on software projects. Git provides
                     version control, allowing teams to work on the same project without conflicts, roll back to previous
@@ -44,7 +44,7 @@
             </article>
 
             <article>
-                <img src="images/branch.jpeg" width="300" height="auto" alt="a branch of a tree">
+                <img src="images/branch.webp" width="300" height="auto" alt="a branch of a tree">
                 <h2>What is a branch in Git?</h2>
                 <p>A branch in Git is a separate line of development, allowing developers to work on new features, bug
                     fixes, or experiments without affecting the main project. Branching enables parallel development,
