Adding model solutions for Wireframe

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,54 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Git</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" href="./img/logo-title.png">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+        <header>
+      
+      <h1> Git</h1>
+      <h2>Git Introduction</h2>
+    </header>
+    <main>
+      <article class="article ">
+        <img class="article-photo" src="./img/git-logo.png" alt="The Git logo" />
+        <h3 class="article-title ">What is Git?</h3>
+        <div class="article-summary">
+          <p>Git is a free, open-source version control system (VCS) that helps developers track and manage changes to their code and projects. It's the most widely used VCS in the world and is considered the modern standard for software development.
+        </p>
+        </div>
+        <a class="article-link" href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F">Read more</a>
+      </article>
+      <article class="article">
+        <img class="article-photo" src="./img/working-on-project.jpeg" alt="Developers working on a project" />
+        <h3 class="article-title">Why do developers need Git?</h3>
+        <div class="article-summary"> <p>
+    Git allows developers to collaborate efficiently. It tracks changes made to the codebase, helping teams work on the same project simultaneously without conflicts. This ensures that each contributor’s work is preserved and properly merged.
+  </p>
+  <p>
+    Moreover, Git keeps a detailed history of every modification. If an issue arises or if developers need to revert to an earlier version of the code, they can easily trace the changes and restore previous versions. This makes Git essential for maintaining code quality and project continuity.
+  </p>
+         </div>
+         <a class="article-link" href="https://www.nobledesktop.com/learn/git/what-is-git#:~:text=Git%20is%20the%20most%20commonly,without%20losing%20each%20other's%20work!">Read more</a>
+      </article>
+      <article class="article">
+        <img class="article-photo" src="./img/git-branch.png" alt="Git branch" />
+        <h3 class="article-title">What is a branch in Git?</h3>
+        <div class="article-summary"><p>
+    A branch in Git is like a parallel version of the project where developers can work on features or fixes independently. It allows them to experiment with new ideas without affecting the main codebase. Each branch can evolve separately until the changes are ready to be merged back into the main project.
+  </p>
+  <p>
+    This branching system provides a safe environment for developers to test and refine code. If something goes wrong, they can easily switch back to the main branch, preserving the stability of the project while still allowing innovation and experimentation.
+  </p>
+        </p>
+         </div>
+        <a class="article-link" href="https://www.w3schools.com/git/git_branch.asp?remote=github">Read more</a>
+      </article>  
+    </main>
+    <footer class="footer">
+      <h4>Created by: <a href="https://github.com/AliQassab">Ali Qassab</a></h4>
+    </footer>
 </body>
 </html
