added img to html

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -19,7 +19,7 @@
 
         <section>
           
-          <img src="">
+          <img src="images/git.jpg">
           <h2>What is Git?</h2>
           <p>Git is a system that helps developers track changes in code. It allows teams to work together on the same project without losing any information or overwriting changes. Git is important for keeping the code organized.</p>
 
@@ -36,7 +36,7 @@
         <section>
 
           <div>
-            <img src="">
+            <img src="images/developers.jpg">
             <h2>Why do developers need Git?</h2>
             <p>Developers need Git to work together on the same project, keep track of code changes, and make sure they don’t lose any work. Git helps with collaboration, organization, and fixing mistakes.</p>
             <button>Read more</button>
@@ -48,7 +48,7 @@
           </div>
 
           <div>
-            <img src="">
+            <img src="images/branch.jpg">
             <h2>What is a branch in Git?</h2>
             <p>A branch in Git is a separate version of the project where developers can work on new features or fixes without changing the main code. Branches help keep the project organized and allow many tasks to be done at the same time.</p>
             <button>Read more</button>
