--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -64,6 +64,8 @@
       </main>
 
 
-      <footer></footer>
+      <footer>
+        <p>© 2024 Understanding Git. All rights reserved.</p>
+      </footer>
 </body>
 </html
