initial Wireframe code

--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -33,7 +33,7 @@
       <section class="p-sec">
         <h1>Welcome</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
+          Lorem6 ipsum dolor sit amet consectetur, adipisicing elit. Quae
           voluptatem accusantium, necessitatibus cum accusamus, id cumque harum
           voluptates ipsum nisi vero illo dolore! Doloribus, quae hic. Facilis
           voluptate nobis eum.
