keleton page code

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,35 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <title>DELLA BELLA WIREFRAME</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
-</html
+
+      <!-- NAV -->
+       <nav>
+       </nav>
+
+       <!-- header -->
+       <header>
+       </header>
+
+     <!--SECTION -->
+      <section>
+      </section>
+
+      <!-- ARTICLES SECTION -->
+      <article></article>
+      <article></article>
+      <article></article>
+
+     
+       <!-- Footer-->
+        <footer>
+        </footer>
+
+  </body>
+</html>
