--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Add your HTML markup here -->
@@ -17,7 +21,7 @@
 
       <main>
 
-        <section>
+        <section class="one">
           
           <img src="images/git.jpg">
           <h2>What is Git?</h2>
@@ -33,7 +37,7 @@
 
         </section>
 
-        <section>
+        <section class="two">
 
           <div>
             <img src="images/developers.jpg">
