What is Git commit

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
@@ -20,9 +20,13 @@
         <section class="articles">
             <article>
                 <h2>What is Git?</h2>
+                <p>Git is a popular  version control system that helps develpers to keep track of changes. By using Git developers can work together from anywhere in the world.
+                and see the full history of the project. Also, They can revert to earlier versions of a project.</p>
+                <a href="https://www.atlassian.com/git/tutorials/what-is-git">Read More</a>
+   
               </article>
-    
-            <div class="article-row">
+              
+              <div class="article-row">
               <article>
 
               </article>
