--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -10,4 +10,5 @@
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
-</html
+</html>
+
