initial commit: html bones with styles.css

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
+    <title>CYF News</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+</head>
+<body>
+    <header>
+        <h1>CYF News</h1>
+        <p>We bring you the latest developments from within the CodeYourFuture camp.</p>
+    </header>
+
+    <main>
+        <section class="articles">
+            <article>
+                <h2>First Article Title</h2>
+                <img src="placeholder1.jpg" alt="Article 1 Thumbnail">
+                <p>Summary of the first article. This is where you'd put a brief description of the article's content.</p>
+                <button class="read-more">Read More</button>
+            </article>
+
+            <article>
+                <h2>Second Article Title</h2>
+                <img src="placeholder2.jpg" alt="Article 2 Thumbnail">
+                <p>Summary of the second article. This is where you'd put a brief description of the article's content.</p>
+                <button class="read-more">Read More</button>
+            </article>
+
+            <article>
+                <h2>Third Article Title</h2>
+                <img src="placeholder3.jpg" alt="Article 3 Thumbnail">
+                <p>Summary of the third article. This is where you'd put a brief description of the article's content.</p>
+                <button class="read-more">Read More</button>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 CYF News. All rights reserved.</p>
+    </footer>
 </body>
-</html
+</html>
