--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+
+   <header>
+    <h1>Understanding Git</h1>
+    <p>A Brief Overview of Git and Its Key Concepts</p>
+</header>
+
+<main>
+    
+</main>
+
+<footer>
+    <p>&copy; 2024 Git Tutorial. All rights reserved.</p>
+</footer>
 </body>
 </html
