--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
-    
+    <header>
+      <h1>Wireframe Project</h1>
+      <p>Plan first then Develop!</p>
+    </header>
+
 </body>
 </html
