Added Main and Secondary Articles

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,5 +12,29 @@
       <p>Plan first then Develop!</p>
     </header>
 
+    <div class="main-article">
+      <img src="./img/GitHub-headpic.webp" alt="Main Article Image">
+      <div class="content">
+          <h2>What is Git?</h2>
+          <p>Explore the nature of github</p>
+          <button>Read More</button>
+      </div>
+  </div>
+  
+  <div class="secondary-articles">
+    <div class="article">
+        <img src="./img/1_CWFkh5z8oa6dZfn5_gkKKQ.jpg" alt="Article Image 1">
+        <h2>Why do Developers need git?</h2>
+        <p>Find out how git can make development better!</p>
+        <button>Read More</button>
+    </div>
+    <div class="article">
+        <img src="./img/f41e4d86f6d0134e519c8fa1a16cfb7ab34cb047-1920x1080.webp" alt="Article Image 2">
+        <h2>What is a branch in Git?</h2>
+        <p>Learn about the basics of Branch.</p>
+        <button>Read More</button>
+      </div>
+    </div>
+</div>
 </body>
 </html
