--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -36,5 +36,11 @@
       </div>
     </div>
 </div>
+
+<footer>
+  <div class="copyright">
+    &copy; 2024 Alireza Seifi Shalamzari. All rights reserved.
+  </div>
+</footer>
 </body>
 </html
