#2nd update to the layout, matched it to the wireframe for title, description, articles.

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,32 +9,34 @@
 <body>
     <header>
         <h1>CYF News</h1>
-        <p>We bring you the latest developments from within the CodeYourFuture camp.</p>
+        <p>We bring you the latest developments from within the CodeYourFuture community</p>
     </header>
 
     <main>
-        <section class="articles">
-            <article>
-                <h2>First Article Title</h2>
-                <img src="placeholder1.jpg" alt="Article 1 Thumbnail">
-                <p>Summary of the first article. This is where you'd put a brief description of the article's content.</p>
+        <article class="featured-article">
+            <img src="placeholder1.jpg" alt="Featured Article Thumbnail">
+            <div class="article-content">
+                <h2>Featured Article Title</h2>
+                <p>Summary of the featured article. This is where you'd put a brief description of the article's content.</p>
                 <button class="read-more">Read More</button>
-            </article>
+            </div>
+        </article>
 
+        <div class="secondary-articles">
             <article>
-                <h2>Second Article Title</h2>
                 <img src="placeholder2.jpg" alt="Article 2 Thumbnail">
+                <h2>Second Article Title</h2>
                 <p>Summary of the second article. This is where you'd put a brief description of the article's content.</p>
                 <button class="read-more">Read More</button>
             </article>
 
             <article>
-                <h2>Third Article Title</h2>
                 <img src="placeholder3.jpg" alt="Article 3 Thumbnail">
+                <h2>Third Article Title</h2>
                 <p>Summary of the third article. This is where you'd put a brief description of the article's content.</p>
                 <button class="read-more">Read More</button>
             </article>
-        </section>
+        </div>
     </main>
 
     <footer>
