Addes content to html

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,6 +7,36 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+      <h1>Understanding Git</h1>
+      <p>This webpage provides an overview of Git, a popular version control system used by developers.</p>
+    </header>
+    <section>
+      <h1>What is Git</h1>
+      <p>Git is a powerful version control system that helps developers manage their code efficiently. By tracking changes, enabling collaboration, and allowing for experimentation, Git streamlines the development process. </p>
+      </p>
+      <button>Read More</button>
+      </section>
+
+      <article>
+        <h1>Why do developers need Git</h1>
+        <ul>
+          <li>Version Control:Git keeps a history of changes.</li>
+          <li>Collaboration:Git enables teams to work together efficiently.</li>
+          <li>Experimentation:Developers can create branches to try out new features or ideas.</li>
+          <li>Backup:Git provides a reliable way to back up code and prevent data loss.</li>
+        </ul>
+        <button>Read More</button>
+      </article>
+      <article>
+        <h1>What is branch in Git</h1>
+        <p>A branch in Git is a parallel line of development within a repository. It allows developers to work on different features, bug fixes, or experimental changes without affecting the main codebase.</p>
+        <button>Read More</button>
+      </article>
+      <footer>
+        <p>Author: Fatima Sfn</p>
+        <p><a href="mailto:asksiyam@gmail.com">asksiyam@gmail.com</a></p>
+      </footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
