https://github.com/donarbl/education-blog_copy.git

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,5 +9,36 @@
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+      <header>
+        <h>understanding git</h> 
+      <p>explanation</p>
+    </header>
+    <section id='articles'>
+      <article class="featured-article">
+        <img src=""git.png alt="git logo">
+        <h2>what is git?</h2>
+        <p>git is a distributed version of control system used to track changes in computer files</p>
+       <a href="#">Read more</a>
+      </article>
+<div class="article-grid">
+  <art>
+    <img src="developers.png" alt="developers collaboration">
+  <h2>why do developers need git?</h2>
+  <p>git allows developers to collaborate on projects more efficiently</p>
+  <a href="#">read more</a>
+</art>
+
+
+<article>
+  <img src="branch.png" alt="git branch">
+<h2>what is a branch in git</h2>
+<p>a branch in git is a separate line of development</p>
+<a href="#">read more</a>
+</article>
+</div>
+    </section>
+
+  <footer>git information corner, ask for more information
+  </footer>
 </body>
 </html
