class for footer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ git commit -m "Set up initial skeleton layout for wireframe"
 
   <footer>
     <!-- Footer section -->
-  </footer>
+  </footer class="text">
 </body>
 </html>
